--- a/appointment_management/views/appointment_detail_template.xml
+++ b/appointment_management/views/appointment_detail_template.xml
@@ -159,7 +159,7 @@
                     </div>
                     <div class="card-body">
                         <form method="POST" t-att-action="'/clinic/appointment/%s/update' % appointment.id"
-                              class="appointment-form">
+                              class="appointment-form" id="update-appointment-form">
                             <input type="hidden" name="csrf_token" t-att-value="request.csrf_token()"/>
                             <div class="row">
                                 <div class="col-md-6 form-group">
@@ -190,8 +190,9 @@
                                 <div class="col-md-6 form-group">
                                     <label for="appointment_date">Ngày hẹn</label>
                                     <input type="date" class="form-control" id="appointment_date"
-                                           name="appointment_date"
+                                           name="appointment_date" t-att-min="min_date"
                                            t-att-value="appointment.appointment_date.strftime('%Y-%m-%d')"/>
+                                    <small class="text-muted">Lịch hẹn chỉ có thể được đặt từ ngày mai trở đi</small>
                                 </div>
                                 <div class="col-md-6 form-group">
                                     <label for="appointment_time">Giờ hẹn</label>
@@ -216,6 +217,53 @@
                     </div>
                 </div>
             </t>
+
+            <!-- Form validation script -->
+            <script type="text/javascript">
+                $(document).ready(function() {
+                    // Set min date for appointment date
+                    const today = new Date();
+                    const tomorrow = new Date(today);
+                    tomorrow.setDate(tomorrow.getDate() + 1);
+
+                    const minDateStr = tomorrow.toISOString().split('T')[0];
+                    $('#appointment_date').attr('min', minDateStr);
+
+                    // Form validation
+                    $('.appointment-form').on('submit', function(e) {
+                        var isValid = true;
+
+                        // Check required fields
+                        $(this).find('[required]').each(function() {
+                            if (!$(this).val()) {
+                                isValid = false;
+                                $(this).addClass('is-invalid');
+                            } else {
+                                $(this).removeClass('is-invalid');
+                            }
+                        });
+
+                        // Check appointment date is at least tomorrow
+                        const appointmentDate = new Date($('#appointment_date').val());
+                        const tomorrow = new Date();
+                        tomorrow.setDate(tomorrow.getDate() + 1);
+                        tomorrow.setHours(0, 0, 0, 0);
+
+                        if (appointmentDate &lt; tomorrow) {
+                            isValid = false;
+                            $('#appointment_date').addClass('is-invalid');
+                            alert('Lịch hẹn chỉ có thể được đặt từ ngày mai trở đi.');
+                        }
+
+                        if (!isValid) {
+                            e.preventDefault();
+                            if (!$('#appointment_date').hasClass('is-invalid')) {
+                                alert('Vui lòng điền đầy đủ thông tin bắt buộc');
+                            }
+                        }
+                    });
+                });
+            </script>
         </t>
     </template>
 </odoo>
