--- a/clinic_appointment_booking/views/website_templates.xml
+++ b/clinic_appointment_booking/views/website_templates.xml
@@ -65,7 +65,8 @@
                                     <div class="row">
                                         <!-- Patient Information -->
                                         <div class="col-md-6">
-                                            <h5 class="mb-3 border-bottom pb-2"><i class="fa fa-user-circle mr-2"></i>
+                                            <h5 class="mb-3 border-bottom pb-2">
+                                                <i class="fa fa-user-circle mr-2"></i>
                                                 Thông tin cá nhân
                                             </h5>
                                             <div class="form-group mb-3">
